# single_agent_search

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: astar.h  common.h  heuristic.h  ida_star.h  move.h  node.h  problem.h  state.h  util.h
src/: astar.cpp  heuristic.cpp  ida_star.cpp  main.cpp  problem.cpp  state.cpp  util.cpp
tests/: AB10  AB17  AB26  AB5  ABSolCheck  README.txt  sol.txt
